cmake_minimum_required(VERSION 3.8)

project("robotjs-exe")

if(APPLE)
    add_executable (robotjs "robotjs.cpp" "lib/deadbeef_rand.c" "lib/mouse.c" "lib/keypress.c" "lib/keycode.c" "lib/screen.c")
    find_library(COREFOUNDATION_LIBRARY CoreFoundation)
    find_library(CARBON_LIBRARY Carbon)
    find_library(APPLICATIONSERVICES_LIBRARY ApplicationServices REQUIRED)
    find_library(OPENGL_LIBRARY OpenGL)
    target_link_libraries(robotjs ${COREFOUNDATION_LIBRARY})
    target_link_libraries(robotjs ${CARBON_LIBRARY})
    target_link_libraries(robotjs ${APPLICATIONSERVICES_LIBRARY})
    target_link_libraries(robotjs ${OPENGL_LIBRARY})
elseif(WIN32)
    add_executable (robotjs "robotjs.cpp" "lib/deadbeef_rand.c" "lib/mouse.c" "lib/keypress.c" "lib/keycode.c" "lib/screen.c")
    set(IS_WINDOWS TRUE)
elseif(UNIX)
    add_executable (robotjs "robotjs.cpp" "lib/deadbeef_rand.c" "lib/mouse.c" "lib/keypress.c" "lib/keycode.c" "lib/screen.c" "lib/xdisplay.c")
    set(USE_X11 TRUE)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(X11 REQUIRED x11)
    pkg_check_modules(XTST REQUIRED xtst)
    target_link_libraries(robotjs ${X11_LIBRARIES})
    target_link_libraries(robotjs ${XTST_LIBRARIES})
endif()
